<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditNoteActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_fee"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_text_picker"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:inputType="number"
        android:text="0"
        android:textSize="30sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_deposit"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_text_already_pay"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:inputType="number"
        android:text="0"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_left_to_pay"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textview_left_to_pay"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:text=""/>

</LinearLayout>